# x-tweet-generator

./: .env.example  .gitignore  README.md  app.py  package-lock.json  package.json  requirements.txt  tweet_generator.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
apps/api/: pyproject.toml  requirements.txt  test_server.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: ab_tests.py  analytics.py  profiles.py  scheduling.py  style.py  threads.py  tweets.py
apps/api/app/core/: config.py  deps.py
apps/api/app/models/: ab_test.py  profile.py  scheduling.py  tweet.py
apps/api/app/services/: analyzer.py  claude.py  scheduler.py  thread_generator.py  twitter_scraper.py
apps/database/migrations/: 001_initial_schema.sql  002_turso_schema.sql
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/components/abtest/: ABTestCreator.tsx
apps/web/src/components/dashboard/: Sidebar.tsx
apps/web/src/components/providers/: NextAuthProvider.tsx  QueryProvider.tsx  SupabaseProvider.tsx
apps/web/src/components/scheduling/: ScheduleCalendar.tsx
apps/web/src/components/style/: StyleAnalyzer.tsx
apps/web/src/hooks/: use-toast.ts
apps/web/src/lib/: api.ts  auth.ts  db.ts  utils.ts
apps/web/src/types/: index.ts
backend/: package-lock.json  package.json
backend/api/: generate.js
frontend/: package-lock.json
frontend/src/: App.jsx
(+23 files in other folders)
